2012-05-03  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (find-definitions-find-symbol): Put back accidentally
	removed with-buffer-syntax.

2012-05-02  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (*find-definitions-right-trim*)
	(*find-definitions-left-trim*): New variables. ",:." and "#:"
	default values.
	(find-definitions-for-emacs): Trim names with using the above
	variables when a symbol is not found.

2012-05-01  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-xrefs-for-notes): Format location in a proper
	way.
	Reported by Max Mikhanosha.

2012-04-27  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-sbcl.lisp (lisp-source-location): How hard can it be to
	get this right? (3-legged IF, FFS!)

2012-04-24  Douglas Crosher <dcrosher@common-lisp.net>

	* swank-scl.lisp (create-socket): correct variable name typo.

	* swank.lisp, swank-rpc.lisp (file options): use #\; to separate the
	file options.

2012-04-23  Christophe Rhodes  <csr21@cantab.net>

	* slime.el (slime-operator-before-point-function): new variable.
	(slime-operator-before-point): use it.
	(slime-lisp-operator-before-point): default implementation for
	slime-operator-before-point-function (unchanged from before).

2012-04-20  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-sbcl.lisp (stream-force-output :around): Workaroud for
	deadlocks between auto-flush-thread buffer write lock and world
	lock.
	(slime-output-stream): Dummy forward definition for the benefit of
	the defmethod.

2012-04-20  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-sbcl.lisp (swank-value): New function, makes it easy to
	refer to variables in SWANK -- which doesn't exist when the
	backend is loaded.
	(lisp-source-location): One of the strings being interned was
	downcased. Fix using SWANK-VALUE.
	(make-socket-io-stream): Use SWANK-VALUE instead of INTERN &
	SYMBOL-VALUE.

2012-04-11  Helmut Eller  <heller@common-lisp.net>
